--- a/docs/legacy/copied-from-beats/docs/debugging.asciidoc
+++ b/docs/legacy/copied-from-beats/docs/debugging.asciidoc
@@ -16,6 +16,9 @@
 <titleabbrev>APM Server binary debugging</titleabbrev>
 ++++
 
+NOTE: Fleet-managed users should see {fleet-guide}/monitor-elastic-agent.html[View {agent} logs]
+to learn how to view logs and change the logging level of {agent}.
+
 By default, {beatname_uc} sends all its output to syslog. When you run {beatname_uc} in
 the foreground, you can use the `-e` command line flag to redirect the output to
 standard error instead. For example:
