--- a/docs/configure/sampling.asciidoc
+++ b/docs/configure/sampling.asciidoc
@@ -3,3 +3,26 @@
 Tail-based sampling configuration options.
 
 include::./tab-widgets/sampling-config-widget.asciidoc[]
+
+
+
+[float]
+[[configuration-tbs]]
+== Configuration options: tail-based sampling
+
+[[sampling.tail.enabled]]
+[float]
+=== `sampling.tail.enabled`
+Set to `true` to enable tail based sampling.
+Disabled by default.
+
+[[sampling.tail.interval]]
+[float]
+=== `sampling.tail.interval`
+Synchronization interval for multiple APM Servers.
+Should be in the order of tens of seconds or low minutes.
+
+[[sampling.tail.policies]]
+[float]
+=== `sampling.tail.policies`
+Criteria used to match a root transaction to a sample rate.
