docs: Update and combine troubleshooting guides (#10827)
* very basic for now

* update and combine troubleshooting guides

* remove file

* empty

* fix broken link

* feedback from @simitt

* Apply suggestions from code review

Co-authored-by: Andrew Wilkins <axwalk@gmail.com>

---------

Co-authored-by: Andrew Wilkins <axwalk@gmail.com>

--- a/docs/legacy/redirects.asciidoc
+++ b/docs/legacy/redirects.asciidoc
@@ -314,3 +314,9 @@ Please see <<whats-new>>.
 
 This page has moved.
 Please see {observability-guide}/whats-new.html[What's new in {observability} {minor-version}].
+
+[role="exclude",id="troubleshooting"]
+=== Troubleshooting
+
+This page has moved.
+Please see <<troubleshoot-apm>>.
