--- a/docs/troubleshoot-apm.asciidoc
+++ b/docs/troubleshoot-apm.asciidoc
@@ -1,9 +1,16 @@
 [[troubleshoot-apm]]
-== Troubleshooting
+== Troubleshoot
 
-This section provides solutions to <<common-problems>>
-and <<processing-and-performance>> guidance.
-For additional help, see the links below.
+This section provides solutions to common questions and problems,
+and processing and performance guidance.
+
+* <<common-problems>>
+* <<server-es-down>>
+* <<common-response-codes>>
+* <<processing-and-performance>>
+* <<enable-apm-server-debugging>>
+
+For additional help with other APM components, see the links below.
 
 [float]
 [[troubleshooting-docs]]
@@ -40,4 +47,10 @@ visit our https://discuss.elastic.co/c/apm[discussion forum].
 
 include::common-problems.asciidoc[]
 
+include::apm-server-down.asciidoc[]
+
+include::apm-response-codes.asciidoc[]
+
 include::processing-performance.asciidoc[]
+
+include::./legacy/copied-from-beats/docs/debugging.asciidoc[]
