--- a/docs/tab-widgets/api-key.asciidoc
+++ b/docs/tab-widgets/api-key.asciidoc
@@ -21,5 +21,5 @@ apm-server.auth.api_key.limit: 50 <2>
 <2> Restricts the number of unique API keys that {es} allows each minute.
 This value should be the number of unique API keys configured in your monitored services.
 
-All other configuration options are described in <<api-key-settings>>.
+All other configuration options are described in <<api-key>>.
 // end::binary[]
