--- a/docs/configure/env.asciidoc
+++ b/docs/configure/env.asciidoc
@@ -1,5 +1,11 @@
-[float]
-== Use environment variables in the configuration
+[[config-env]]
+= Use environment variables in the configuration
+
+****
+image:./binary-yes-fm-no.svg[supported deployment methods]
+
+This documentation is only relevant for APM Server binary users.
+****
 
 You can use environment variable references in the config file to
 set values that need to be configurable during deployment. To do this, use:
@@ -43,7 +49,7 @@ setting from the command line by using the `-E` option. For example:
 ==================================
 
 [float]
-=== Examples
+== Examples
 
 Here are some examples of configurations that use environment variables
 and what each configuration looks like after replacement:
@@ -60,7 +66,7 @@ and what each configuration looks like after replacement:
 |==================================
 
 [float]
-=== Specify complex objects in environment variables
+== Specify complex objects in environment variables
 
 You can specify complex objects, such as lists or dictionaries, in environment
 variables by using a JSON-like syntax.
