--- a/docs/configure/general.asciidoc
+++ b/docs/configure/general.asciidoc
@@ -1,6 +1,12 @@
 [[configuration-process]]
 = General configuration options
 
+****
+image:./binary-yes-fm-yes.svg[supported deployment methods]
+
+Most options on this page are supported by all APM Server deployment methods.
+****
+
 General APM Server configuration options.
 
 include::./tab-widgets/general-config-widget.asciidoc[]
@@ -63,8 +69,6 @@ Defaults to `3600s` (3600 seconds). (text)
 | Fleet-managed     | Maximum duration for reading an entire request
 |====
 
-// REVIEWER: Default 3600 seconds (FM) or 30 seconds (binary)?
-
 [[write_timeout]]
 [float]
 == Write timeout
@@ -86,8 +90,6 @@ Defaults to `30s` (30 seconds). (text)
 | APM Server binary | `apm-server.shutdown_timeout`
 | Fleet-managed     | Maximum duration before releasing resources when shutting down
 |====
-
-// REVIEWER: Default 30 seconds (FM) or 5 seconds (binary)?
 
 [[max_event_size]]
 [float]
@@ -201,13 +203,26 @@ Disabled by default.
 
 [[data_streams.wait_for_integration]]
 [float]
-== `datastreams.wait_for_integration`
-Wait for the `apm` {fleet} integration to be installed by {kib}. Requires either <<kibana-enabled>>
+== Wait for integration
+Wait for the `apm` {fleet} integration to be installed by {kib}. Requires either the <<kibana-enabled,Kibana endpoint>> being enabled
 or for the <<elasticsearch-output, {es} output>> to be configured.
 Defaults to true.
 
+|====
+| APM Server binary | `datastreams.wait_for_integration`
+| Fleet-managed     | N/A
+|====
+
 [[data_streams.namespace]]
 [float]
-== `data_streams.namespace`
+== Data stream namespace
 
-requires text
+Change the default namespace.
+This setting changes the name of the integration's data stream.
+
+For {fleet}-managed users, the namespace is inherited from the selected {agent} policy.
+
+|====
+| APM Server binary | `data_streams.namespace`
+| Fleet-managed     | `Namespace` (Integration settings > Advanced options)
+|====
