--- a/docs/configure/path.asciidoc
+++ b/docs/configure/path.asciidoc
@@ -5,6 +5,13 @@
 <titleabbrev>Project paths</titleabbrev>
 ++++
 
+****
+image:./binary-yes-fm-no.svg[supported deployment methods]
+
+This documentation is only relevant for APM Server binary users.
+Fleet-managed paths are defined in <<directory-layout>>.
+****
+
 The `path` section of the +{beatname_lc}.yml+ config file contains configuration
 options that define where {beatname_uc} looks for its files. For example, {beatname_uc}
 looks for the {es} template file in the configuration path and writes
