--- a/docs/configure/rum.asciidoc
+++ b/docs/configure/rum.asciidoc
@@ -5,6 +5,12 @@
 <titleabbrev>Real User Monitoring (RUM)</titleabbrev>
 ++++
 
+****
+image:./binary-yes-fm-yes.svg[supported deployment methods]
+
+Most options in this section are supported by all APM Server deployment methods.
+****
+
 The {apm-rum-ref-v}/index.html[Real User Monitoring (RUM) agent] captures user interactions with clients such as web browsers.
 These interactions are sent as events to the APM Server.
 Because the RUM agent runs on the client side, the connection between agent and server is unauthenticated.
@@ -18,8 +24,6 @@ you will need to configure {apm-rum-ref-v}/configuring-cors.html[Cross-Origin Re
 [float]
 [[enable-rum-support]]
 = Configuration reference
-
-Specify the following options in the `apm-server.rum` section of the `apm-server.yml` config file:
 
 [[rum-enable]]
 [float]
@@ -118,7 +122,12 @@ Default: `"^/webpack"` (excludes stack trace frames that have a filename startin
 [[rum-source-map]]
 = Source map configuration options
 
-NOTE: These configuration options only apply to the APM Server binary.
+****
+image:./binary-yes-fm-no.svg[supported deployment methods]
+
+Source maps are supported by all APM Server deployment methods, however,
+the options in this section are only supported by the APM Server binary.
+****
 
 [[config-sourcemapping-enabled]]
 [float]
@@ -161,7 +170,7 @@ Default: `"apm-*-sourcemap*"`
 [[event_rate.limit]]
 == `event_rate.limit`
 
-deprecated::[7.15.0, Replaced by <<config-auth-anon-event-limit,`auth.anonymous.rate_limit.event_limit`>>.]
+deprecated::[7.15.0, Replaced by <<config-auth-anon-event-limit>>.]
 
 The maximum number of events allowed per second, per agent IP address.
 
@@ -170,7 +179,7 @@ Default: `300`
 [float]
 == `event_rate.lru_size`
 
-deprecated::[7.15.0, Replaced by <<config-auth-anon-ip-limit,`auth.anonymous.rate_limit.ip_limit`>>.]
+deprecated::[7.15.0, Replaced by <<config-auth-anon-ip-limit>>.]
 
 The number of unique IP addresses to track in an LRU cache.
 IP addresses in the cache will be rate limited according to the <<config-auth-anon-event-limit>> setting.
@@ -182,7 +191,7 @@ Default: `1000`
 [[rum-allow-service-names]]
 == `allow_service_names`
 
-deprecated::[7.15.0, Replaced by <<config-auth-anon-allow-service,`auth.anonymous.allow_service`>>.]
+deprecated::[7.15.0, Replaced by <<config-auth-anon-allow-service>>.]
 A list of permitted service names for RUM support.
 Names in this list must match the agent's `service.name`.
 This can be set to restrict RUM events to those with one of a set of known service names,
