--- a/docs/configure/tab-widgets/anon-auth.asciidoc
+++ b/docs/configure/tab-widgets/anon-auth.asciidoc
@@ -13,4 +13,6 @@ apm-server.auth.anonymous.rate_limit.ip_limit: 1000
 
 // tag::fleet-managed[]
 include::../shared/input-apm.asciidoc[tag=fleet-managed-settings]
++
+. Look for these settings under **Agent authorization**.
 // end::fleet-managed[]
