--- a/docs/configure/tab-widgets/general-config.asciidoc
+++ b/docs/configure/tab-widgets/general-config.asciidoc
@@ -18,4 +18,6 @@ max_procs: 4
 
 // tag::fleet-managed[]
 include::../shared/input-apm.asciidoc[tag=fleet-managed-settings]
++
+. Look for these settings under **General**.
 // end::fleet-managed[]
