--- a/docs/configure/outputs/console.asciidoc
+++ b/docs/configure/outputs/console.asciidoc
@@ -5,6 +5,12 @@
 <titleabbrev>Console</titleabbrev>
 ++++
 
+****
+image:./binary-yes-fm-no.svg[supported deployment methods]
+
+The Console output is not yet supported by {fleet}-managed APM Server.
+****
+
 The Console output writes events in JSON format to stdout.
 
 WARNING: The Console output should be used only for debugging issues as it can produce a large amount of logging data.
@@ -58,3 +64,5 @@ setting does not affect how events are published.
 Setting `bulk_max_size` to values less than or equal to 0 disables the
 splitting of batches. When splitting is disabled, the queue decides on the
 number of events to be contained in a batch.
+
+include::codec.asciidoc[leveloffset=+1]
