--- a/docs/configure/outputs/elasticsearch.asciidoc
+++ b/docs/configure/outputs/elasticsearch.asciidoc
@@ -5,6 +5,13 @@
 <titleabbrev>{es}</titleabbrev>
 ++++
 
+****
+image:./binary-yes-fm-no.svg[supported deployment methods]
+
+This documentation only applies to APM Server binary users.
+Fleet-managed users should see {fleet-guide}/elasticsearch-output.html[Configure the {es} output].
+****
+
 The {es} output sends events directly to {es} using the {es} HTTP API.
 
 Example configuration:
