--- a/docs/configure/outputs/logstash.asciidoc
+++ b/docs/configure/outputs/logstash.asciidoc
@@ -5,6 +5,12 @@
 <titleabbrev>{ls}</titleabbrev>
 ++++
 
+****
+image:./binary-yes-fm-no.svg[supported deployment methods]
+
+The {ls} output is not yet supported by {fleet}-managed APM Server.
+****
+
 The {ls} output sends events directly to {ls} by using the lumberjack
 protocol, which runs over TCP. {ls} allows for additional processing and routing of
 generated events.
