--- a/docs/configure/outputs/output-cloud.asciidoc
+++ b/docs/configure/outputs/output-cloud.asciidoc
@@ -6,6 +6,12 @@
 <titleabbrev>{ess}</titleabbrev>
 ++++
 
+****
+image:./binary-yes-fm-no.svg[supported deployment methods]
+
+This documentation only applies to APM Server binary users.
+****
+
 ifdef::apm-server[]
 NOTE: This page refers to using a separate instance of APM Server with an existing
 {ess-product}[{ess} deployment].
