--- a/docs/integrations-index.asciidoc
+++ b/docs/integrations-index.asciidoc
@@ -64,8 +64,6 @@ include::apm-quick-start.asciidoc[]
 
 include::./legacy/getting-started-apm-server.asciidoc[]
 
-include::./legacy/setting-up-and-running.asciidoc[]
-
 include::data-model.asciidoc[]
 
 include::features.asciidoc[]
@@ -80,6 +78,8 @@ include::input-apm.asciidoc[]
 
 include::configure/index.asciidoc[leveloffset=+1]
 
+include::./legacy/setting-up-and-running.asciidoc[]
+
 include::secure-agent-communication.asciidoc[]
 
 include::monitor-apm-server.asciidoc[]
@@ -90,50 +90,10 @@ include::troubleshoot-apm.asciidoc[]
 
 include::upgrading.asciidoc[]
 
-include::apm-components.asciidoc[]
-
 include::release-notes.asciidoc[leveloffset=+1]
 
-// TODO: Figure out if it's safe to remove everything between the *'s
-// ********************************************************
-// ********************************************************
-:apm-ref-all: https://www.elastic.co/guide/en/apm/get-started/
+include::./legacy/redirects.asciidoc[]
 
-// Overwrite links to the APM Overview and APM Server Ref. Point to APM Guide instead.
-:apm-overview-ref-v: {apm-guide-ref}
-:apm-guide-ref: {apm-guide-ref}
-:apm-server-ref-v: {apm-guide-ref}
-:apm-server-ref: {apm-guide-ref}
-// ********************************************************
-// ********************************************************
-
-
-// Legacy APM Server Reference
-// include::legacy/index.asciidoc[]
-
-// ifndef::apm-integration-docs[]
-// [[apm-server]]
-// = APM Server Reference
-// endif::[]
-
-// ifdef::apm-integration-docs[]
-// Overwrite links to the APM Overview and APM Server Ref. Point to APM Guide instead.
-:apm-overview-ref-v: {apm-guide-ref}
-:apm-guide-ref: {apm-guide-ref}
-:apm-server-ref-v: {apm-guide-ref}
-:apm-server-ref: {apm-guide-ref}
-
-// [[overview]]
-// = Legacy APM Server Reference
-
-== BEGIN "LEGACY" REFERENCE
-
-include::./legacy/overview.asciidoc[]
-// endif::[]
-
+// This is being moved in https://github.com/elastic/apm-server/pull/10841
 :beat-specific-security: {docdir}/legacy/security.asciidoc
 include::{libbeat-dir}/shared-securing-beat.asciidoc[leveloffset=+1]
-
-// include::./legacy/breaking-changes.asciidoc[leveloffset=+1]
-
-include::./legacy/redirects.asciidoc[]
