--- a/docs/tab-widgets/secret-token.asciidoc
+++ b/docs/tab-widgets/secret-token.asciidoc
@@ -1,7 +1,7 @@
 // tag::fleet-managed[]
 Create or update a secret token in {fleet}.
 
-include::../input-apm.asciidoc[tag=edit-integration-settings]
+include::../configure/shared/input-apm.asciidoc[tag=fleet-managed-settings]
 +
 . Navigate to **Agent authorization** > **Secret token** and set the value of your token.
 . Click **Save integration**. The APM Server will restart before the change takes effect.
